Fixed the problem where the navbar expanded when too many things/too long.
Fixed by adjusting the body padding on resize, because the header bar may grow thicker.
Also fixed the height of the nav list in full view, because it was causing problems with overflow.

--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,9 @@
 /* ==========================================================================
 Author's custom styles
 ========================================================================== */
+
+/* BEGIN PERSISTENT STYLES */
+
 html, body {
   width: auto !important;
   overflow-x: hidden !important;
@@ -25,6 +28,23 @@ textarea {
     resize: none;
 }
 
+/* END PERSISTENT STYLES */
+
+/*-----------------------*/
+
+/* BEGIN HEADER BAR */
+
+.navbar-fixed-height {
+    max-height: 60px;
+    overflow-y: auto;
+}
+
+/* END HEADER BAR */
+
+/*-----------------------*/
+
+/* BEGIN HOME PAGE */
+
 #stepsName {
     font-size: 550%;
     position: relative;
@@ -44,6 +64,7 @@ textarea {
     margin: 2% auto 0 0;
     text-align: right;
 }
+
 .align-text-box {
     margin: 1.5% 0 0 0;
 }
@@ -51,6 +72,7 @@ textarea {
 .spaceout {
     margin: 1% auto;
 }
+
 .subtitle {
     font-size: 30px;
     text-align: center;
@@ -107,32 +129,13 @@ textarea {
 
 .module-thumb-img img:hover {
     -webkit-filter: sepia(90%) hue-rotate(-225deg);
-    /*width: 300px;
-    height: 300px;*/
-    /*width: 100%;*/
     border-radius: 50%;
 }
 
 .module-thumb-img img {
     width: 100%;
-    /*width: 263px;
-    height: 263px;*/
     border-radius: 50%;
-    /*height: 300px;*/
 }
-
-/*.module-thumb-caption:hover {
-    text-align:center;
-    background: #04173f;
-    border-top: solid 2px #fff;
-    color: #fff;
-    font-size: 16px;
-    padding: 10px;
-    width: 100%;
-    /*height: 100px;*/
-    /*margin-bottom:20px;*/
-    /*overflow:hidden;*/
-/*}*/
 
 .module-thumb-caption,
 .module-thumb-caption:hover {
@@ -153,7 +156,6 @@ textarea {
 
 .module-thumb-caption-header,
 .module-thumb-caption-header:hover {
-    /*font-weight: ;*/
     font-size: 1.1em;
     display:inline-block;
 }
@@ -165,7 +167,6 @@ textarea {
 
 .navbar-login-container {
     padding:0px 15px;
-    //display:none;
 }
 
 .module-thumb a:hover {
@@ -182,7 +183,11 @@ textarea {
     text-align:left;
 }
 
-/*Module Page*/
+/* END HOME PAGE */
+
+/*-----------------------*/
+
+/* BEGIN MODULE PAGE */
 
 .wrap-sidebar {
     width: 100%;
@@ -338,9 +343,9 @@ textarea {
     text-align: right;
 }
 
-.btt-btn {
-    /*border-radius: 50%;*/
-}
+/* END MODULE PAGE */
+
+/*-----------------------*/
 
 /* BEGIN LECTURER CONSOLE */
 
@@ -736,6 +741,10 @@ textarea {
 
 /* if small screen (max-width: 768px), apply these rules instead */
 @media (max-width: 767px) {
+    
+    .navbar-fixed-height {
+        max-height: initial;
+    }
 
     .blank-heading {
         display:none;
